process links and group => see also

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseUrl = "http://hugotest.ca"
+baseUrl = "http://naturecompanion.ca"
 disableKinds = ["RSS", "sitemap", "taxonomy", "taxonomyTerms"]
 uglyurls = true
