--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,13 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [ {
+      "source": "/service-worker.js",
+      "headers": [ {
+          "key": "Cache-Control",
+          "value": "no-cache,no-store,must-revalidate"
+        } ]
+    } ]
   }
 }
